# mcp-server-conceal

./: .gitignore  Cargo.toml  INTEGRATION.md  README.md  export_model.py  flake.nix  mcp-server-conceal.example.toml
crates/mcp-server-conceal-core/: Cargo.toml
crates/mcp-server-conceal-core/src/: bootstrap.rs  config.rs  deanonymize.rs  faker.rs  lib.rs  mapping.rs  ner.rs  prompt_loader.rs  proxy.rs  server.rs
crates/mcp-server-conceal-core/src/templates/: builtin_detailed.md  builtin_simple.md
crates/mcp-server-conceal/src/: main.rs
prompts/: detailed.md
